# martin-halvorsons-civ-vis

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  exhibition.ps1  exhibition.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: collaboration-policy.yml  tests.yml
ci/: tests.yml
civ65/: __init__.py  cli.py  entities.py  env.py  game.py  mapgen.py  render.py  rules.py
civ65/ai/: __init__.py  basic_ai.py  random_ai.py
civ65/data/: buildings.json  districts.json  features.json  resources.json  techs.json  units.json
civvis/: __init__.py  cli.py  combat.py  entities.py  game.py  hexgrid.py  world.py
civvis/ai/: basic_ai.py
civvis/data/: civics.json  improvements.json  terrains.json
data/: beliefs.json  buildings.json  civics.json  difficulties.json  districts.json  elo_ratings.json  eras.json  features.json  goody_huts.json  governments.json  governors.json  great_people.json  improvements.json  policies.json  projects.json  promotions.json  resources.json  speeds.json  techs.json  terrains.json  tree_effects.json  units.json  wmds.json  wonders.json
deploy/: com.civvis.spectator.plist  register_spectator_task.ps1
docs/: AI_GAPS.md  AI_GUIDE.md  ARCHITECTURE.md  COMPETITIVE.md  EVAL.md  FIDELITY.md  GROUNDING.md  LEAGUE.md  MECHANICS.md  MODIFIERS.md  MODS.md  ROADMAP.md  SPECTATOR_DEPLOY.md  UNCIV_LESSONS.md  VERSION_CONTROL.md
mods/swift-legions/: mod.json  speeds.json  units.json
rust/: Cargo.toml
rust/src/: ai.rs  game.rs  hex.rs  lib.rs  main.rs  mapgen.rs  rng.rs  rules.rs  world.rs
src/: action_space.rs  actionlog.rs  ai.rs  elo.rs  evolve.rs  fractal.rs  game.rs  hex.rs  league.rs  lib.rs  main.rs  mapgen.rs  mods.rs  neural.rs  obs.rs  obs_tensor.rs  parallel.rs  pedia.rs  policy.rs  rng.rs  rules.rs  selfplay.rs  server.rs  setup.rs  specmap.rs  strategic.rs  validate.rs  valuenet.rs  world.rs
src/ai/: advanced.rs
tests/: test_city_states.py  test_combat.py  test_env.py  test_game_core.py  test_hexgrid.py  test_mapgen.py  test_selfplay.py  test_serialize.py
tools/: civ6_combat_fit.py  civ6_compare_runs.py  civ6_env.py  civ6_fidelity.py  civ6_launch.py  civ6_modifiers.py  civ6_probe.py  civ6_run.py  civ6_setup.py  civ6_strategy.py  civvis_collab.py  civvis_push_guard.py  fidelity_waivers.json  modifier_coverage.json  spectator_supervisor.py  test_civvis_collab.py  test_civvis_push_guard.py  test_spectator_supervisor.py  train_spatial.py  train_valuenet.py
web/: cinematic3d.js  index.html
(+10 files in other folders)
