[package]
name = "civvis"
version = "0.6.0"
edition = "2021"
default-run = "civvis"
description = "Martin Halvorson's Civilization VIS - Rust performance core (headless Civ 6-style engine)"
license = "MIT"

[lib]
name = "civvis"
path = "src/lib.rs"

[[bin]]
name = "civvis"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
